RESOLVED FIXED312410
[AppKit Gestures] Press gesture-based mouse tracking loop should not initiate drag
https://bugs.webkit.org/show_bug.cgi?id=312410
Summary [AppKit Gestures] Press gesture-based mouse tracking loop should not initiate...
Abrar Rahman Protyasha
Reported 2026-04-15 13:42:25 PDT
We will eventually figure out a solution to support dragging, but in the meantime, we need to teach EventHandler about this.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-15 13:42:32 PDT
Abrar Rahman Protyasha
Comment 2 2026-04-15 14:16:49 PDT
EWS
Comment 3 2026-04-16 11:56:25 PDT
Committed 311392@main (7090b7dbbf8f): <https://commits.webkit.org/311392@main> Reviewed commits have been landed. Closing PR #62851 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.